--- a/webapp/front/front/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
@@ -48,4 +48,4 @@
 
   <!-- Footer component if you have it -->
 </div>
-<app-wave-footer [isMarketplace]="true"></app-wave-footer>
+<app-wave-footer [theme]="'marketplace'"></app-wave-footer>
