--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-edit-page/marketplace-product-edit-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-edit-page/marketplace-product-edit-page.component.html
@@ -253,4 +253,4 @@
   </div>
 </div>
 
-<app-wave-footer [isMarketplace]="true"></app-wave-footer>
+<app-wave-footer [theme]="'marketplace'"></app-wave-footer>
