--- a/webapp/front/front/src/app/features/service-providers/service-providers-layout/service-providers-layout.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-layout/service-providers-layout.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row init">
     <div class="column-left">
-      <app-admin-sidebar></app-admin-sidebar>
+      <app-sidebar></app-sidebar>
     </div>
 
     <div class="column-middle">
@@ -14,4 +14,4 @@
     </div>
   </div>
 </div>
-<app-wave-footer></app-wave-footer>
+<app-wave-footer [theme]="'services'"></app-wave-footer>
