--- a/webapp/front/front/src/app/features/marketplace/marketplace-dashboard-buyer-page/marketplace-dashboard-buyer-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-dashboard-buyer-page/marketplace-dashboard-buyer-page.component.html
@@ -300,4 +300,4 @@
 </div>
 
 <!-- Footer -->
-<app-wave-footer [isMarketplace]="true"></app-wave-footer>
+<app-wave-footer [theme]="'marketplace'"></app-wave-footer>
