--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-detail-page/marketplace-product-detail-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-detail-page/marketplace-product-detail-page.component.html
@@ -832,4 +832,4 @@
   </div>
 </div>
 
-<app-wave-footer [isMarketplace]="true"></app-wave-footer>
+<app-wave-footer [theme]="'marketplace'"></app-wave-footer>
