--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-requests-page/marketplace-product-requests-page.component.html
@@ -294,4 +294,4 @@
   </div>
 </div>
 
-<app-wave-footer [isMarketplace]="true"></app-wave-footer>
+<app-wave-footer [theme]="'marketplace'"></app-wave-footer>
