--- a/webapp/front/front/src/app/features/marketplace/marketplace-product-sell-page/marketplace-product-sell-page.component.html
+++ b/webapp/front/front/src/app/features/marketplace/marketplace-product-sell-page/marketplace-product-sell-page.component.html
@@ -239,4 +239,4 @@
   </div>
 </div>
 
-<app-wave-footer [isMarketplace]="true"></app-wave-footer>
+<app-wave-footer [theme]="'marketplace'"></app-wave-footer>
