fix: remove remember me since no standard protocol makes sense

--- a/webapp/front/front/src/app/features/service-providers/service-providers-layout/service-providers-layout.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-layout/service-providers-layout.component.html
@@ -10,7 +10,13 @@
     </div>
 
     <div class="column-right">
-      <app-calendar-widget></app-calendar-widget>
+      <div class="f-c-c-c w100">
+        <app-calendar-widget></app-calendar-widget>
+        <app-tags-filter-widget
+          mode="professions"
+          *ngIf="isServicesRoute"
+        ></app-tags-filter-widget>
+      </div>
     </div>
   </div>
 </div>
