--- a/webapp/front/front/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
+++ b/webapp/front/front/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
@@ -2,7 +2,7 @@
 <app-navbar></app-navbar>
 
 <div class="container">
-  <div class="cool-static-container p-0">
+  <div class="cool-static-container-profile p-0">
     <div class="page-content" id="page-content">
       <div class="row m-l-0 m-r-0">
         <div
@@ -33,7 +33,6 @@
               </div>
             </div>
             <h6 class="bold mb-5 font-size-24">{{ currentUser?.name }}</h6>
-            <p>{{ userRole }}</p>
           </div>
         </div>
         <div class="col-md-8">
