--- a/webapp/front/front/src/app/shared/components/wave-footer/wave-footer.component.html
+++ b/webapp/front/front/src/app/shared/components/wave-footer/wave-footer.component.html
@@ -24,11 +24,8 @@
       y="0"
     ></use>
   </svg>
-  <div [ngClass]="theme" style="height: 2em">
-    <span
-      class="h-100 container f-r-sb-c w-80 p-2"
-      style="color: var(--background) font-size-12"
-    >
+  <div class="div-theme" [ngClass]="theme" style="height: 2em">
+    <span class="h-100 container f-r-sb-c w-80 p-2">
       <p>Your peace of mind is our priority. Safe, secure, and serene.</p>
       <p>Contact us: +54 911 2328-6639 | info&#64;neibo.com</p>
     </span>
